# pqhull

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  sbatch.sh
dataProcessing/: dataplot.py
experimentalresults/n1048576_disk-r100/: forkJoin  parallelSearch  partitionSpace  processPools  serial.times
experimentalresults/n1048576_disk_r100/: forkJoin  parallelSearch  partitionSpace  processPool  serial
experimentalresults/n1048576_exp-e.01/: forkJoin  parallelSearch  partitionSpace  processPools  serial.times
experimentalresults/n1048576_rect-l100/: forkJoin  parallelSearch  partitionSpace  processPools  serial.times
experimentalresults/n16777216_disk-r100/: forkJoin  parallelSearch  partitionSpace  processPools  serial.times
experimentalresults/n16777216_exp-e.01/: forkJoin  parallelSearch  partitionSpace  processPools  serial.times
experimentalresults/n16777216_rect-l100/: forkJoin  parallelSearch  partitionSpace  processPools  serial.times
experimentalresults/n4096_disk-r100/: forkJoin  parallelSearch  partitionSpace  processPools  serial.times
experimentalresults/n4096_disk_r100/: forkJoin  parallelSearch  partitionSpace  processPool  serial
experimentalresults/n4096_exp-e.01/: forkJoin  parallelSearch  partitionSpace  processPools  serial.times
experimentalresults/n4096_rect-l100/: forkJoin  parallelSearch  partitionSpace  processPools  serial.times
experimentalresults/n65536_disk-r100/: forkJoin  parallelSearch  partitionSpace  processPools  serial.times
experimentalresults/n65536_disk_r100/: forkJoin  parallelSearch  partitionSpace  processPool  serial
experimentalresults/n65536_exp-e.01/: forkJoin  parallelSearch  partitionSpace  processPools  serial.times
experimentalresults/n65536_rect-l100/: forkJoin  parallelSearch  partitionSpace  processPools  serial.times
src/: circular_linked_list.cpp  circular_linked_list.hpp  forkJoin.c  forkJoin.cpp  genPoints.c  parallelSearch.c  partitionSpace.c  partitionSpace.cpp  processPool.c  processPool.h  utils.c  utils.h
testinput/: n2048-disk-r10.txt  n32-disk-r10.txt  n4096-disk-r10.txt  n8192-disk-r10.txt
testoutput/: n2048-disk-r10-hull.txt  n32-disk-r10-hull.txt  n4096-r10-hull.txt  n8192-r10-hull.txt
